<?xml version="1.0" encoding="utf-8"?>
<!-- 
 - 
 -  Copyright 2011 Birkett Enterprise Ltd
 -
 -  Licensed under the Apache License, Version 2.0 (the "License");
 -  you may not use this file except in compliance with the License.
 -  You may obtain a copy of the License at
 -
 -     http://www.apache.org/licenses/LICENSE-2.0
 -
 -  Unless required by applicable law or agreed to in writing, software
 -  distributed under the License is distributed on an "AS IS" BASIS,
 -  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 -  See the License for the specific language governing permissions and
 -  limitations under the License.
 - 
 -->

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference
		android:key="periodic_updates_enabled"
		android:title="@string/periodic_updates"
		android:summary="@string/periodic_updates_summary" />
 	<ListPreference
                android:key="update_frequency"
                android:title="@string/update_frequency"
                android:summary="@string/update_frequency_summary"
                android:entries="@array/update_frequencies"
                android:entryValues="@array/update_frequencies_values"
                android:dialogTitle="@string/update_frequency"
                android:dependency="periodic_updates_enabled" />
   	<CheckBoxPreference
		android:key="gps_enabled"
		android:title="@string/gps_enabled"
		android:summary="@string/gps_enabled_summary"
		android:dependency="periodic_updates_enabled" />
   	<ListPreference
                android:key="gps_timeout"
                android:title="@string/gps_timeout"
                android:summary="@string/gps_timeout_summary"
                android:entries="@array/gps_timeouts"
                android:entryValues="@array/gps_timeout_values"
                android:dialogTitle="@string/gps_timeout"
                android:dependency="gps_enabled"
                />
   	<CheckBoxPreference
		android:key="hide_sms_trigger"
		android:title="@string/hide_sms_trigger"
		android:summary="@string/hide_sms_trigger_summary" />
   	
   	<CheckBoxPreference
		android:key="passcode_enabled"
		android:title="@string/passcode_enabled_preference"
		android:summary="@string/passcode_enabled_preference_summary" />
   	 	
   	<EditTextPreference
   	    android:key="passcode"
   	    android:numeric="decimal"
   	    android:password="true"
		android:title="@string/passcode_preference"
		android:summary="@string/passcode_preference_summary"
		android:dependency="passcode_enabled" />
   	
</PreferenceScreen>